# tiger

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/kernels/: alloy_math.cl
ext/: CMakeLists.txt
include/: ActivationLayer.h  AddElementsLayer.h  Alpha.h  AveragePoolFilter.h  AveragePoolingLayer.h  AverageUnpoolingLayer.h  BatchNormalizationLayer.h  BitVolume.h  ConcatLayer.h  ConvolutionFilter.h  ConvolutionLayer.h  DeconvolutionLayer.h  DropOutLayer.h  FullyConnectedFilter.h  FullyConnectedLayer.h  GlobalAveragePoolingLayer.h  InputLayer.h  LinearLayer.h  LocalResponseNormLayer.h  MNIST.h  MaxPoolingLayer.h  MaxUnpoolingLayer.h  NeuralBase.h  NeuralCache.h  NeuralFilter.h  NeuralFlowPane.h  NeuralKnowledge.h  NeuralLayer.h  NeuralLayerRegion.h  NeuralLossFunction.h  NeuralNetwork.h  NeuralOptimization.h  NeuralOptimizer.h  NeuralParams.h  NeuralRuntime.h  NeuralSignal.h  NeuralSystem.h  NeuralTensor.h  NeuralWorker.h  Neuron.h  (+8 more)
include/tiny_dnn/: nodes.h  train.h
include/tiny_dnn/core/: backend.h  backend_avx.h  backend_tiny.h
include/tiny_dnn/core/kernels/: avx_deconv2d_kernel.h  conv2d_grad_op_avx.h  conv2d_op_avx.h  conv2d_op_internal.h  conv2d_op_libdnn.h  conv2d_op_nnpack.h  conv2d_op_opencl.h  fully_connected_grad_op.h  fully_connected_op.h  fully_connected_op_avx.h  fully_connected_op_internal.h  global_avepool_op_internal.h  maxpool_op_nnpack.h  tiny_deconv2d_back_kernel.h  tiny_deconv2d_kernel.h  tiny_quantized_conv2d_kernel.h  tiny_quantized_deconv2d_kernel.h
include/tiny_dnn/core/params/: conv_params.h  deconv_params.h  fully_params.h
include/tiny_dnn/io/caffe/: layer_factory_impl.h
include/tiny_dnn/layers/: average_pooling_layer.h  average_unpooling_layer.h  batch_normalization_layer.h  concat_layer.h  convolutional_layer.h  deconvolutional_layer.h  fully_connected_layer.h  global_average_pooling_layer.h  layer.h  lrn_layer.h  max_pooling_layer.h  max_unpooling_layer.h  quantized_convolutional_layer.h  quantized_deconvolutional_layer.h  quantized_fully_connected_layer.h  slice_layer.h
include/tiny_dnn/util/: aligned_allocator.h  image.h  parallel_for.h  random.h  serialization_functions.h  util.h
include/tiny_dnn/xtensor/: xarray.hpp  xassign.hpp  xaxis_iterator.hpp  xbroadcast.hpp  xbuilder.hpp  xcomplex.hpp  xcontainer.hpp  xcsv.hpp  xeval.hpp  xexpression.hpp  xfunction.hpp  xfunctorview.hpp  xgenerator.hpp  xindexview.hpp  xio.hpp  xiterable.hpp  xiterator.hpp  xmath.hpp  xmissing.hpp  xnoalias.hpp  xoffsetview.hpp  xoperation.hpp  xoptional.hpp  xrandom.hpp  xreducer.hpp  xscalar.hpp  xsemantic.hpp  xslice.hpp  xstridedview.hpp  xstrides.hpp  xtensor.hpp  xtensor_forward.hpp  xutils.hpp  xvectorize.hpp  xview.hpp  xview_utils.hpp
src/: ActivationLayer.cpp  AddElementsLayer.cpp  AveragePoolFilter.cpp  AveragePoolingLayer.cpp  AverageUnpoolingLayer.cpp  BatchNormalizationLayer.cpp  BitVolume.cpp  ConcatLayer.cpp  ConvolutionFilter.cpp  ConvolutionLayer.cpp  DeconvolutionLayer.cpp  DropOutLayer.cpp  FullyConnectedFilter.cpp  FullyConnectedLayer.cpp  GlobalAveragePoolingLayer.cpp  InputLayer.cpp  LinearLayer.cpp  LocalResponseNormLayer.cpp  MNIST.cpp  MaxPoolingLayer.cpp  MaxUnpoolingLayer.cpp  NeuralBase.cpp  NeuralCache.cpp  NeuralFilter.cpp  NeuralFlowPane.cpp  NeuralKnowledge.cpp  NeuralLayer.cpp  NeuralLayerRegion.cpp  NeuralLossFunction.cpp  NeuralNetwork.cpp  NeuralOptimization.cpp  NeuralOptimizer.cpp  NeuralProcessor.cpp  NeuralRuntime.cpp  NeuralSignal.cpp  NeuralSystem.cpp  NeuralTensor.cpp  NeuralWorker.cpp  Neuron.cpp  NeuronFunction.cpp  (+9 more)
vs2015/: JesusChrist.sln  Tiger.sln
vs2015/JesusChrist/: JesusChrist.vcxproj
vs2015/Tiger/: Tiger.vcxproj  Tiger.vcxproj.filters
